# roam-code

./: .gitignore  CLAUDE.md  MATCHPLAN.md  README.md  llms-install.md  package-lock.json  pyproject.toml
.github/workflows/: publish.yml  sync-upstream.yml
.kiro/settings/: lsp.json
.mulle/etc/project/: version-info.sh
benchmarks/agent-eval/workspaces/: .gitignore
benchmarks/agent-eval/workspaces/claude-code-sonnet/astro-landing_vanilla/: .gitignore  QUICKSTART.md  README.md  astro.config.mjs  package.json
benchmarks/agent-eval/workspaces/claude-code-sonnet/astro-landing_vanilla/src/components/: Contact.astro  FAQ.astro  Features.astro  Footer.astro  Header.astro  Hero.astro  HowItWorks.astro  Pricing.astro  (+1 more)
benchmarks/agent-eval/workspaces/claude-code-sonnet/astro-landing_vanilla/tests/: components.test.js  validation.test.js
benchmarks/agent-eval/workspaces/claude-code-sonnet/cpp-calculator_vanilla/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  FEATURES.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  build.sh  example.txt
benchmarks/agent-eval/workspaces/claude-code-sonnet/cpp-calculator_vanilla/include/: AST.h  Evaluator.h  Lexer.h  Parser.h  Token.h
benchmarks/agent-eval/workspaces/claude-code-sonnet/cpp-calculator_vanilla/src/: AST.cpp  Evaluator.cpp  Lexer.cpp  Parser.cpp  Token.cpp  main.cpp
benchmarks/agent-eval/workspaces/claude-code-sonnet/cpp-calculator_vanilla/test/: test_main.cpp
benchmarks/agent-eval/workspaces/claude-code-sonnet/go-loganalyzer_vanilla/: .gitignore  EXAMPLES.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  go.mod
benchmarks/agent-eval/workspaces/claude-code-sonnet/python-crawler_vanilla/: .gitignore  EXAMPLES.md  LICENSE  PROJECT_SUMMARY.md  README.md  pyproject.toml
benchmarks/agent-eval/workspaces/claude-code-sonnet/python-crawler_vanilla/src/webcrawler/: __init__.py  cli.py  crawler.py  parser.py  reporter.py  robots.py  url_utils.py
benchmarks/agent-eval/workspaces/claude-code-sonnet/python-crawler_vanilla/tests/: __init__.py  test_crawler.py  test_parser.py  test_reporter.py  test_robots.py  test_url_utils.py
benchmarks/agent-eval/workspaces/claude-code/astro-landing_vanilla/: README.md  package-lock.json  package.json
benchmarks/agent-eval/workspaces/claude-code/astro-landing_vanilla/tests/: build.test.ts
benchmarks/agent-eval/workspaces/claude-code/cpp-calculator_vanilla/: CMakeLists.txt  README.md
benchmarks/agent-eval/workspaces/claude-code/cpp-calculator_vanilla/include/calculator/: evaluator.h  lexer.h  parser.h  repl.h
benchmarks/agent-eval/workspaces/claude-code/cpp-calculator_vanilla/src/: evaluator.cpp  lexer.cpp  main.cpp  parser.cpp  repl.cpp
benchmarks/agent-eval/workspaces/claude-code/cpp-calculator_vanilla/tests/: CMakeLists.txt  test_calculator.cpp
benchmarks/agent-eval/workspaces/claude-code/go-loganalyzer_vanilla/: README.md  go.mod
benchmarks/agent-eval/workspaces/claude-code/python-crawler_vanilla/: README.md  pyproject.toml
benchmarks/agent-eval/workspaces/claude-code/python-crawler_vanilla/src/webcrawler/: __init__.py  cli.py  crawler.py  models.py  parser.py  reporter.py
benchmarks/agent-eval/workspaces/claude-code/python-crawler_vanilla/tests/: test_cli.py  test_crawler.py  test_models.py  test_parser.py  test_reporter.py
benchmarks/agent-eval/workspaces/claude-code/react-todo_vanilla/: README.md  package-lock.json  package.json  vite.config.js
benchmarks/agent-eval/workspaces/claude-code/react-todo_vanilla/src/: App.jsx  App.module.css  index.css
benchmarks/agent-eval/workspaces/codex/astro-landing_vanilla/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
benchmarks/agent-eval/workspaces/codex/astro-landing_vanilla/test/: faq.test.ts  validation.test.ts
benchmarks/agent-eval/workspaces/codex/cpp-calculator_roam-cli/: CMakeLists.txt  README.md  sample_expr.txt
benchmarks/agent-eval/workspaces/codex/cpp-calculator_roam-cli/include/calculator/: ast.h  context.h  engine.h  errors.h  evaluator.h  lexer.h  parser.h  repl.h  token.h  value.h
benchmarks/agent-eval/workspaces/codex/cpp-calculator_roam-cli/src/: ast.cpp  context.cpp  engine.cpp  evaluator.cpp  lexer.cpp  main.cpp  parser.cpp  repl.cpp  token.cpp  value.cpp
benchmarks/agent-eval/workspaces/codex/cpp-calculator_roam-cli/tests/: test_calculator.cpp
benchmarks/agent-eval/workspaces/codex/cpp-calculator_vanilla/: CMakeLists.txt  README.md
benchmarks/agent-eval/workspaces/codex/cpp-calculator_vanilla/include/calculator/: ast.h  calculator.h  context.h  errors.h  evaluator.h  format.h  lexer.h  parser.h  repl.h  token.h
benchmarks/agent-eval/workspaces/codex/cpp-calculator_vanilla/src/: calculator.cpp  context.cpp  evaluator.cpp  format.cpp  lexer.cpp  main.cpp  parser.cpp  repl.cpp
benchmarks/agent-eval/workspaces/codex/cpp-calculator_vanilla/tests/: test_calculator.cpp
benchmarks/agent-eval/workspaces/codex/go-loganalyzer_vanilla/: README.md  go.mod
benchmarks/agent-eval/workspaces/codex/python-crawler_vanilla/: README.md  pyproject.toml
benchmarks/agent-eval/workspaces/codex/python-crawler_vanilla/src/webcrawler/: __init__.py  cli.py  crawler.py  models.py  parser.py  reporter.py
benchmarks/agent-eval/workspaces/codex/python-crawler_vanilla/tests/: test_crawler.py  test_parser.py  test_reporter_and_cli.py
benchmarks/agent-eval/workspaces/codex/react-todo_vanilla/: README.md  index.html  package-lock.json  package.json
benchmarks/agent-eval/workspaces/codex/react-todo_vanilla/src/: constants.js  index.css
benchmarks/agent-eval/workspaces/gemini-cli/react-todo_vanilla/: package.json
docs/: BACKLOG.md  COMPETITIVE_LANDSCAPE.md  FORK_INTEL.md
docs/ideas/: A_test_coverage.md  I_backend_command_improvements.md
docs/site/: README.md
reports/: 06_master_backlog.md
src/roam/commands/: cmd_config.py  cmd_risk.py
src/roam/index/: parser.py  relations.py
src/roam/languages/: objc_lang.py  registry.py
src/roam/workspace/: api_scanner.py
tests/: _writegen.py  test_objc.py  test_resolve.py  test_workspace.py
(+102 files in other folders)
