[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webcrawler"
version = "1.0.0"
description = "An async web crawler with configurable depth, concurrency, and multiple output formats."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
]

[project.scripts]
webcrawler = "webcrawler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
